@@ -12,6 +12,7 @@ VERSION 3.0.1
    * Indicate which search option is active in Wikipedia applet (BR 332010)
 
   CHANGES:
+   * Amarok now depends on KDE Frameworks 5.78.
    * Improve strings in user interface (incl. BR 343896, BR 234854)
 
   BUGFIXES:
